--- a/catalog/templates/base_generic.html
+++ b/catalog/templates/base_generic.html
@@ -23,12 +23,12 @@
           <div class="col-sm-2">
           {% block sidebar %}
 
-          <img src="{% static 'images/logo.png' %}" alt="Logo" style="width:160px;height:140px;"/>
+          
 
           <ul class="sidebar-nav">
-              <li><a href="{% url 'index' %}">Home</a></li>
+              <li><a href="{% url 'index' %}"><img src="{% static 'images/logo.png' %}" alt="Logo" style="width:160px;height:140px;"/></a></li>
               <li><a href="{% url 'books' %}">All books</a></li>
-              <li><a href="">All authors</a></li>
+              <li><a href="{% url 'authors' %}">All authors</a></li>
           </ul>
          {% endblock %}
           </div>
