--- a/catalog/templates/index.html
+++ b/catalog/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "base_generic.html" %}
 
-{% block title %} <title>Index</title> {% endblock %}
+{% block title %} <title>Home - Local Library</title> {% endblock %}
 
 
 {% block content %}
@@ -24,5 +24,6 @@
     </strong> 
     {{ num_books_letter_o }}
   </p>
+  <p>You have visited this page {{ num_visits }}{% if num_visits == 1 %} time{% else %} times{% endif %}.</p>
 
 {% endblock %}
