--- a/catalog/templates/base_generic.html
+++ b/catalog/templates/base_generic.html
@@ -28,11 +28,17 @@
               <li><a href="{% url 'authors' %}">All authors</a></li>
               <p></p>
               {% if user.is_authenticated %}
-              <li>User: {{ user.get_username }}</li>
-              <li><a href="{% url 'my-borrowed' %}">My Borrowed</a></li>
-              <li><a href="{% url 'logout'%}?next={{request.path}}">Logout</a></li>
-            {% else %}
-              <li><a href="{% url 'login'%}?next={{request.path}}">Login</a></li>
+                <li>User: {{ user.get_username }}</li>
+                <li><a href="{% url 'my-borrowed' %}">My Borrowed</a></li>
+                {% if perms.catalog.can_mark_returned %}
+                  <!-- We can mark a BookInstance as returned. -->
+                  <li><a href="{% url 'borrowed-books' %}">All borrowed</a></li>
+                  <!-- Perhaps add code to link to a "book return" view here. -->
+               {% endif %}
+               <p></p>
+               <li><a href="{% url 'logout'%}?next={% url 'index' %}">Logout</a></li>
+              {% else %}
+                <li><a href="{% url 'login'%}?next={% url 'index' %}">Login</a></li>
             {% endif %}
           </ul>
          {% endblock %}
