--- a/catalog/templates/catalog/book_detail.html
+++ b/catalog/templates/catalog/book_detail.html
@@ -17,11 +17,11 @@
     <p class="{% if copy.status == 'a' %}text-success{% elif copy.status == 'd' %}text-danger{% else %}text-warning{% endif %}">{{ copy.get_status_display }}</p>
     {% if copy.status != 'a' %}<p><strong>Due to be returned:</strong> {{copy.due_back}}</p>{% endif %}
     <p><strong>Imprint:</strong> {{copy.imprint}}</p>
-    <!--  инфа для библиотекаря
+    {% if perms.catalog.can_mark_returned %}
       {% if copy.borrower is not None %}
         <p><strong>Borrower:</strong> {{copy.borrower}}</p>
       {% endif %}
-      -->
+    {% endif %}
     <p class="text-muted"><strong>Id:</strong> {{copy.id}}</p>
     {% endfor %}
   </div>
