--- a/catalog/templates/catalog/author_detail.html
+++ b/catalog/templates/catalog/author_detail.html
@@ -5,10 +5,11 @@
 
   <p><strong>Date of birth:</strong> {{ author.date_of_birth }}</p>
   <p><strong>Date of death:</strong> {{ author.date_of_death }}</p>
+  {% if perms.catalog.can_mark_returned %}
+    <p><a href="{% url 'author-update' author.pk %}">Update author</a></p>
+    <p><a href="{% url 'author-delete' author.pk %}">Delete author</a></p>
+  {% endif %}
   
-
-
-
   <div style="margin-left:20px;margin-top:20px">
     <h4>Books</h4>
 
