--- a/catalog/templates/catalog/author_list.html
+++ b/catalog/templates/catalog/author_list.html
@@ -2,6 +2,9 @@
 
 {% block content %}
     <h1>Author List</h1>
+    {% if perms.catalog.can_mark_returned %}
+      <p><a href="{% url 'author-create' %}">Add new author</a></p>
+    {% endif %}
 
     {% if author_list %}
     <ul>
