--- a/catalog/templates/catalog/book_detail.html
+++ b/catalog/templates/catalog/book_detail.html
@@ -8,7 +8,10 @@
   <p><strong>ISBN:</strong> {{ book.isbn }}</p>
   <p><strong>Language:</strong> {{ book.language }}</p>
   <p><strong>Genre:</strong> {% for genre in book.genre.all %} {{ genre }}{% if not forloop.last %}, {% endif %}{% endfor %}</p>
-
+  {% if perms.catalog.can_mark_returned %}
+    <p><a href="{% url 'book-update' book.pk %}">Update book</a></p>
+    <p><a href="{% url 'book-delete' book.pk %}">Delete book</a></p>
+  {% endif %}
   <div style="margin-left:20px;margin-top:20px">
     <h4>Copies</h4>
 
