--- a/catalog/templates/catalog/book_list.html
+++ b/catalog/templates/catalog/book_list.html
@@ -2,6 +2,9 @@
 
 {% block content %}
     <h1>Book List</h1>
+    {% if perms.catalog.can_mark_returned %}
+      <p><a href="{% url 'book-create' %}">Add new book</a></p>
+    {% endif %}
 
     {% if book_list %}
     <ul>
